# hn-signals

./: README.md  analyzer.py  config.yaml  database.py  extractor.py  filter.py  main.py  pyproject.toml  reporter.py  scraper.py
prompts/: extract.txt  filter.txt  synthesize.txt
